<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/homeMargins"
    app:layoutDescription="@xml/fragment_home_motion_scene">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/progressBarPosition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/menuButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/switchThemeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switchThemeLabel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/privacyPreferencesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacyPreferencesLabel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/privacyCenterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacyCenterLabel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fetchConsentsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fetchConsentsLabel" />

    </LinearLayout>

    <Button
        android:id="@+id/consentsListControlButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hideConsentsLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/consentsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</androidx.constraintlayout.motion.widget.MotionLayout>